[gd_scene load_steps=26 format=2]

[ext_resource path="res://adnan/WelcomeText.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Cairo/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Components/Welcome/Button.gd" type="Script" id=3]
[ext_resource path="res://Components/Control_1.gd" type="Script" id=4]
[ext_resource path="res://Components/Welcome/L,Gray_text_box_with_dots_Left.png" type="Texture" id=5]
[ext_resource path="res://Components/Welcome/Gray_text_box.png" type="Texture" id=6]
[ext_resource path="res://Components/Welcome/R,Gray_text_box_with_dots_Right.svg" type="Texture" id=7]
[ext_resource path="res://Components/Welcome/Green_text_BoxIII.svg" type="Texture" id=8]
[ext_resource path="res://assets/fonts/battlenet/new_dynamicfont.tres" type="DynamicFont" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=5]
resource_name = "fadeI"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control_1/NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fadeII"
tracks/0/type = "value"
tracks/0/path = NodePath("Control_1/NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "fadeI"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control_1/NinePatchRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "fadeII"
tracks/0/type = "value"
tracks/0/path = NodePath("Control_1/NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "fadeI"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control_1/NinePatchRect3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "fadeII"
tracks/0/type = "value"
tracks/0/path = NodePath("Control_1/NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "fadeI"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control_1/NinePatchRect4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "fadeII"
tracks/0/type = "value"
tracks/0/path = NodePath("Control_1/NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=43]
resource_name = "fadeI"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control_1/NinePatchRect5:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=44]
resource_name = "fadeII"
tracks/0/type = "value"
tracks/0/path = NodePath("Control_1/NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=41]
resource_name = "fadeI"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control_1/NinePatchRect6:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=42]
resource_name = "fadeII"
tracks/0/type = "value"
tracks/0/path = NodePath("Control_1/NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fade"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:custom_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.6, 4.3, 5.2, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.639216 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:custom_styles/panel:bg_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )

[node name="Welcome" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Press Shift + Q to skip intro dialogue"
}

[node name="WelcomeTimer" type="Timer" parent="."]
wait_time = 1.7
autostart = true

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="Instructions" type="MarginContainer" parent="Node2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 96.0
margin_right = 608.0
margin_bottom = 546.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="Node2D/Instructions"]
self_modulate = Color( 0.972549, 0.972549, 0.972549, 1 )
margin_left = 15.0
margin_top = 15.0
margin_right = 595.0
margin_bottom = 435.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Node2D/Instructions"]
margin_left = 15.0
margin_top = 15.0
margin_right = 595.0
margin_bottom = 435.0

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/Instructions/MarginContainer"]
margin_right = 580.0
margin_bottom = 420.0
alignment = 1

[node name="Label" type="Label" parent="Node2D/Instructions/MarginContainer/HBoxContainer"]
margin_left = 63.0
margin_top = 29.0
margin_right = 517.0
margin_bottom = 390.0
custom_fonts/font = ExtResource( 2 )
text = "Welcome to iFp's first game: Uncover!

Walk around with the letters WASD
on your keyboard.

Press T to close messages.

Press Q to release your mouse pointer.

If you reach the end of a path in the game, just close
and start over.

... and don't be afraid to walk through a door or two  :)
(avoid walls though)"

[node name="Control_1" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="Background" type="Panel" parent="Control_1"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="PanelXI" type="Panel" parent="Control_1"]
margin_left = 135.0
margin_top = 15.0
margin_right = 1023.0
margin_bottom = 217.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control_1/PanelXI"]
margin_right = 884.0
margin_bottom = 174.0
texture = ExtResource( 8 )
region_rect = Rect2( -1027.25, 0, 4533.08, 1378.64 )

[node name="Label" type="Label" parent="Control_1/PanelXI"]
margin_left = 228.0
margin_top = 23.0
margin_right = 836.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 9 )
align = 1
autowrap = true
clip_text = true

[node name="PanelXII" type="Panel" parent="Control_1"]
margin_left = 8.0
margin_top = 236.0
margin_right = 921.0
margin_bottom = 393.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control_1/PanelXII"]
margin_top = -28.0
margin_right = 779.0
margin_bottom = 139.0
texture = ExtResource( 6 )
region_rect = Rect2( 1.24512, 0, 15806.4, 4496.51 )

[node name="Label" type="Label" parent="Control_1/PanelXII"]
margin_left = 40.0
margin_top = -11.0
margin_right = 749.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 9 )
align = 1
autowrap = true
clip_text = true

[node name="PanelXIIV" type="Panel" parent="Control_1"]
margin_right = 40.0
margin_bottom = 40.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control_1/PanelXIIV"]
margin_left = 132.0
margin_top = 391.0
margin_right = 1018.0
margin_bottom = 587.0
size_flags_vertical = 4
texture = ExtResource( 8 )
region_rect = Rect2( -981.553, 0, 4459.32, 1374.72 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control_1/PanelXIIV"]
margin_left = 368.0
margin_top = 427.0
margin_right = 976.0
margin_bottom = 552.0
custom_fonts/font = ExtResource( 9 )
text = "
"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[node name="PanelXIV" type="Panel" parent="Control_1"]
margin_left = 2.0
margin_top = 39.0
margin_right = 807.0
margin_bottom = 208.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control_1/PanelXIV"]
margin_left = 17.0
margin_top = -5.0
margin_right = 796.0
margin_bottom = 162.0
texture = ExtResource( 6 )
region_rect = Rect2( 1.24512, 0, 15806.4, 4496.51 )

[node name="Label" type="Label" parent="Control_1/PanelXIV"]
margin_left = 31.0
margin_top = 6.0
margin_right = 740.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 9 )
align = 1
autowrap = true
clip_text = true

[node name="PanelXV" type="Panel" parent="Control_1"]
margin_left = 138.0
margin_top = 202.0
margin_right = 1026.0
margin_bottom = 385.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control_1/PanelXV"]
margin_right = 884.0
margin_bottom = 174.0
texture = ExtResource( 8 )
region_rect = Rect2( -1027.25, 0, 4533.08, 1378.64 )

[node name="Label" type="Label" parent="Control_1/PanelXV"]
margin_left = 228.0
margin_top = 23.0
margin_right = 836.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 9 )
align = 1
autowrap = true
clip_text = true

[node name="PanelXVI" type="Panel" parent="Control_1"]
margin_left = -1.0
margin_top = 415.0
margin_right = 804.0
margin_bottom = 584.0
rect_pivot_offset = Vector2( 641, 93 )

[node name="NinePatchRect" type="NinePatchRect" parent="Control_1/PanelXVI"]
margin_left = 13.0
margin_top = -15.0
margin_right = 792.0
margin_bottom = 152.0
texture = ExtResource( 6 )
region_rect = Rect2( 1.24512, 0, 15806.4, 4496.51 )

[node name="Label" type="Label" parent="Control_1/PanelXVI"]
margin_left = 34.0
margin_top = -4.0
margin_right = 743.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 9 )
text = "'I'm tying my shoes'
... 'Okay omw'
"
align = 1
autowrap = true
clip_text = true

[node name="PanelXVII" type="Panel" parent="Control_1"]
margin_left = 101.0
margin_top = 20.0
margin_right = 906.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( 641, 93 )

[node name="Label" type="Label" parent="Control_1/PanelXVII"]
margin_left = 6.0
margin_top = 9.0
margin_right = 715.0
margin_bottom = 134.0
rect_scale = Vector2( 1.12128, 1.18505 )
custom_fonts/font = ExtResource( 9 )
align = 1
autowrap = true
clip_text = true

[node name="Button" type="Button" parent="Control_1/PanelXVII"]
margin_left = 338.0
margin_top = 143.0
margin_right = 440.0
margin_bottom = 163.0
text = "Press T 2 times to close"
script = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="Control_1"]
modulate = Color( 1, 1, 1, 0.961489 )
margin_left = 595.0
margin_top = 58.0
margin_right = 798.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 186, 65 )
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 3473.16, 1639.47 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Control_1/NinePatchRect"]
root_node = NodePath("../../..")
anims/fadeI = SubResource( 5 )
anims/fadeII = SubResource( 6 )

[node name="NinePatchRect2" type="NinePatchRect" parent="Control_1"]
margin_left = 268.0
margin_top = 247.0
margin_right = 471.0
margin_bottom = 331.0
rect_pivot_offset = Vector2( 93, -47 )
texture = ExtResource( 5 )
region_rect = Rect2( -26.9524, 0, 3443.58, 1444.87 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Control_1/NinePatchRect2"]
root_node = NodePath("../../..")
anims/fadeI = SubResource( 13 )
anims/fadeII = SubResource( 14 )

[node name="NinePatchRect3" type="NinePatchRect" parent="Control_1"]
margin_left = 617.0
margin_top = 446.0
margin_right = 820.0
margin_bottom = 530.0
rect_pivot_offset = Vector2( 139, -17 )
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 3473.16, 1639.47 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Control_1/NinePatchRect3"]
root_node = NodePath("../../..")
anims/fadeI = SubResource( 15 )
anims/fadeII = SubResource( 16 )

[node name="NinePatchRect4" type="NinePatchRect" parent="Control_1"]
margin_left = 265.0
margin_top = 57.0
margin_right = 468.0
margin_bottom = 141.0
rect_pivot_offset = Vector2( 93, -47 )
texture = ExtResource( 5 )
region_rect = Rect2( -26.9524, 0, 3443.58, 1444.87 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Control_1/NinePatchRect4"]
root_node = NodePath("../../..")
anims/fadeI = SubResource( 27 )
anims/fadeII = SubResource( 28 )

[node name="NinePatchRect5" type="NinePatchRect" parent="Control_1"]
margin_left = 616.0
margin_top = 237.0
margin_right = 819.0
margin_bottom = 321.0
rect_pivot_offset = Vector2( 139, -17 )
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 3473.16, 1639.47 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Control_1/NinePatchRect5"]
root_node = NodePath("../../..")
anims/fadeI = SubResource( 43 )
anims/fadeII = SubResource( 44 )

[node name="NinePatchRect6" type="NinePatchRect" parent="Control_1"]
margin_left = 281.0
margin_top = 448.0
margin_right = 484.0
margin_bottom = 532.0
rect_pivot_offset = Vector2( 93, -47 )
texture = ExtResource( 5 )
region_rect = Rect2( -26.9524, 0, 3443.58, 1444.87 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Control_1/NinePatchRect6"]
root_node = NodePath("../../..")
anims/fadeI = SubResource( 41 )
anims/fadeII = SubResource( 42 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1028.0
margin_bottom = 599.0
custom_styles/panel = SubResource( 4 )

[connection signal="timeout" from="WelcomeTimer" to="." method="_on_WelcomeTimer_timeout"]
[connection signal="timeout" from="WelcomeTimer" to="Control_1" method="_on_WelcomeTimer_timeout"]
[connection signal="pressed" from="Control_1/PanelXVII/Button" to="." method="_on_Button_pressed"]
